- Refactored the mod to use fabric mixins, so it can now be installed through the mods folder
- Added hazel trees to woods when deco is enabled.
- Added the ability for new deco stones to generate.
- Changed stone variants to only generate within their respective strata according to the changes in deco.
- Fixed an issue where some biomes were not generating sugar cane when they were supposed to.

Version 3.0.0
[list]
[*]Updated to CE 1.4.1
[*]Refactored the entire mod into two separate mods. The Better Terrain Addon now acts as a library for world generation, while the biomes themselves previously present in BTA have been split into Better Biomes. Note that this is still backwards compatible with old worlds, but will require both mods to be installed. BTA now only maintains variants of vanilla biomes which generate using BTA features. Most of these have been ported from existing biomes, while an additional swamp variant has been added.
[*]Added the ability for addons to decorate BTA Biomes using the standard FCAddOn hook. Note that BTA biomes may deny this in case they wish to use a custom decorator for that addon's features.
[*]Changed rivers to be much larger. This can be disabled at world creation, and only affects new worlds.
[*]Changed deserts to no longer spawn gravel beaches.
[*]Changed climates to default to off if there are not enough biomes installed (note that climates may still be enabled if desired).
[*]Changed the format of the world configuration info to use json. Old worlds will still be processed correctly.
[*]Changed the world type when creating a new world to default to Better Terrain.
[*]Removed patches of exposed stone.
[/list]

Version 2.0.8
[list]
[*]Fixed an issue where eyes of ender could not locate strongholds.
[*]Fixed an issue where soul sand piles could not locate nether fortresses.
[*]Fixed an issue where nether fortress mobs would not spawn.
[/list]

Version 2.0.7
[list]
[*]Updated to BTW CE 1.3.8